fix: :lipstick: make mdc dialog work in dark mode

--- a/src/popup.scss
+++ b/src/popup.scss
@@ -28,6 +28,9 @@
         --mdc-select-label-ink-color: rgba(255, 255, 255, 0.87);
         --mdc-select-dropdown-icon-color: rgba(255, 255, 255, 0.54);
 
+        --mdc-dialog-heading-ink-color: rgba(255, 255, 255, 0.87);
+        --mdc-dialog-content-ink-color: rgba(255, 255, 255, 0.6);
+
         --scroll-track-color: #222222;
         --scroll-thumb-color: #383838;
     }
